apps/metrics-api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: metrics-api
  namespace: metrics-api
  labels:
    app: metrics-api
spec:
  type: ClusterIP
  selector:
    app: metrics-api
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
